# TsFile_XlsxFile_transform

./: CMakeLists.txt  ExcelRW.cpp  ExcelRW.h  MainWindow.cpp  MainWindow.h  README.md  TsFileRW.cpp  TsFileRW.h  main.cpp
xlsxRWLib/: CMakeLists.txt  xlsxzipreader.cpp
